--- a/index.html
+++ b/index.html
@@ -4,171 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Login Form</title>
-<style>
-    body {
-        font-family: Arial, sans-serif;
-        background-image: url('e:/tugas 9/1125084.png'); /* Ganti path dengan lokasi gambar latar belakang Anda */
-        background-size: cover;
-        background-position: center;
-        margin: 0;
-        padding: 0;
-    }
-
-    .overlay {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background-color: rgba(0, 0, 0, 0.6); /* Ubah opacity dan warna overlay sesuai keinginan */
-    }
-
-    .header {
-        background-color: #b5aeae;
-        color: #fff;
-        padding: 10px 0;
-        text-align: center;
-        position: relative;
-        z-index: 1; /* Atur z-index agar header tetap di atas overlay */
-    }
-
-    .header h1 {
-        margin: 0;
-    }
-
-    .menu-toggle {
-        display: none;
-        cursor: pointer;
-        position: absolute;
-        top: 10px;
-        right: 10px;
-        z-index: 1000;
-    }
-
-    .menu-toggle span {
-        display: block;
-        width: 25px;
-        height: 3px;
-        background-color: #fff;
-        margin: 5px 0;
-        transition: transform 0.3s ease;
-    }
-
-    .menu-toggle.open span:nth-child(1) {
-        transform: rotate(45deg) translateY(6px);
-    }
-
-    .menu-toggle.open span:nth-child(2) {
-        opacity: 0;
-    }
-
-    .menu-toggle.open span:nth-child(3) {
-        transform: rotate(-45deg) translateY(-6px);
-    }
-
-    .container {
-        max-width: 400px;
-        margin: 50px auto;
-        padding: 20px;
-        background-color: #fff;
-        border-radius: 5px;
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        opacity: 0;
-        animation: fadeIn 1s ease forwards;
-        position: relative; /* Tambahkan posisi relatif untuk kontainer */
-        z-index: 1; /* Atur z-index agar kontainer tetap di atas overlay */
-    }
-
-    @keyframes fadeIn {
-        to {
-            opacity: 1;
-        }
-    }
-
-    h2 {
-        text-align: center;
-        margin-bottom: 20px;
-    }
-
-    input[type="text"], input[type="password"] {
-        width: 100%;
-        padding: 10px;
-        margin-bottom: 15px;
-        border: 1px solid #ccc;
-        border-radius: 5px;
-        box-sizing: border-box;
-    }
-
-    input[type="submit"] {
-        width: 100%;
-        padding: 10px;
-        background-color: #4caf50;
-        color: #fff;
-        border: none;
-        border-radius: 5px;
-        cursor: pointer;
-    }
-
-    input[type="submit"]:hover {
-        background-color: #45a049;
-    }
-
-    nav {
-        display: flex;
-        justify-content: center;
-        gap: 20px;
-        margin-top: 20px;
-        overflow-x: hidden;
-        transition: transform 0.3s ease;
-    }
-
-    nav a {
-        color: #333;
-        text-decoration: none;
-        padding: 8px 16px;
-        border-radius: 5px;
-        background-color: #f0f0f0;
-        transition: background-color 0.3s ease;
-    }
-
-    nav a:hover {
-        background-color: #ddd;
-    }
-
-    .menu-toggle:checked + .header nav {
-        transform: translateX(0);
-    }
-
-    @media screen and (max-width: 768px) {
-        .menu-toggle {
-            display: block;
-        }
-
-        .header nav {
-            display: flex;
-            flex-direction: column;
-            position: absolute;
-            top: 50px;
-            right: -100%;
-            background-color: #333;
-            padding: 10px 0;
-            border-radius: 0 0 5px 5px;
-            transition: right 0.3s ease;
-        }
-
-        .header nav a {
-            display: block;
-            text-align: center;
-            padding: 10px 0;
-            color: #fff;
-            text-decoration: none;
-        }
-
-        .menu-toggle:checked + .header nav {
-            right: 0;
-        }
-    }
-</style>
+<link rel="stylesheet" href="login.css">
 </head>
 <body>
     <div class="overlay"></div> <!-- Tambahkan overlay di atas background -->
